loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "3600" # Example for AWS to set timeout
    service.beta.kubernetes.io/azure-load-balancer-internal: "true" # Example for Azure internal LB
  labels:
    app: dev-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: dev
